--- a/mysvc.yml
+++ b/mysvc.yml
@@ -62,3 +62,17 @@ spec:
                 name: gateway-clusterip-svc
                 port:
                   number: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gateway-loadbalancer
+  namespace: connect-ns
+spec:
+  type: LoadBalancer
+  selector:
+    app: gateway
+  ports:
+  - port: 80
+    targetPort: 8000
+  externalTrafficPolicy: Local # always redirect traffic to pod on a node where connection was initialized!!
