--- a/mysvc.yml
+++ b/mysvc.yml
@@ -82,4 +82,5 @@ spec:
 
 
 # LoadBalancer service requires its own load balancer and publich IP, n services = n load balancers + public IPs
+# If we have one api gateway to expose, it might be enough. But if we have multiple api gateways, we might want to use Ingress.
 # Ingress requires only one, host and path is used to forward traffic to different services, n services = 1 Ingress (load balancer + IP)
